--- a/meta/main.yml
+++ b/meta/main.yml
@@ -20,11 +20,18 @@ galaxy_info:
 
     - name: ArchLinux
       versions:
-        - any
+        - all
 
     - name: EL
       versions:
-        - '7'
+        - '8'
+        - '9'
+
+    - name: Ubuntu
+      versions:
+        - bionic
+        - focal
+        - jammy
 
   galaxy_tags:
     - ssh
