--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,5 +1,39 @@
 ---
 
+__ssh_audited_kex_algorithm_variants:
+  default:
+    - sntrup761x25519-sha512@openssh.com
+    - curve25519-sha256
+    - curve25519-sha256@libssh.org
+    - diffie-hellman-group18-sha512
+    - diffie-hellman-group16-sha512
+    - diffie-hellman-group-exchange-sha256
+  redhat_8:
+    - curve25519-sha256
+    - curve25519-sha256@libssh.org
+    - diffie-hellman-group18-sha512
+    - diffie-hellman-group16-sha512
+    - diffie-hellman-group-exchange-sha256
+  ubuntu_18:
+    - curve25519-sha256
+    - curve25519-sha256@libssh.org
+    - diffie-hellman-group18-sha512
+    - diffie-hellman-group16-sha512
+    - diffie-hellman-group-exchange-sha256
+  ubuntu_20:
+    - curve25519-sha256
+    - curve25519-sha256@libssh.org
+    - diffie-hellman-group18-sha512
+    - diffie-hellman-group16-sha512
+    - diffie-hellman-group-exchange-sha256
+
+__ssh_audited_kex_algorithms: >-
+  {{
+    __ssh_audited_kex_algorithm_variants[__ssh_distro_version] |
+      default(__ssh_audited_kex_algorithm_variants[__ssh_os_version]) |
+      default(__ssh_audited_kex_algorithm_variants['default'])
+  }}
+
 __ssh_audited_key_algorithm_variants:
   default:
     - sk-ssh-ed25519@openssh.com
