--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,31 +1,26 @@
 ---
 
+# -----------------------------------------------------------------------------
+# key exchange algorithms
+# -----------------------------------------------------------------------------
+
+__ssh_audited_kex_algorithms_base:
+  - curve25519-sha256
+  - curve25519-sha256@libssh.org
+  - diffie-hellman-group18-sha512
+  - diffie-hellman-group16-sha512
+  - diffie-hellman-group-exchange-sha256
+
 __ssh_audited_kex_algorithm_variants:
-  default:
-    - sntrup761x25519-sha512@openssh.com
-    - curve25519-sha256
-    - curve25519-sha256@libssh.org
-    - diffie-hellman-group18-sha512
-    - diffie-hellman-group16-sha512
-    - diffie-hellman-group-exchange-sha256
-  redhat_8:
-    - curve25519-sha256
-    - curve25519-sha256@libssh.org
-    - diffie-hellman-group18-sha512
-    - diffie-hellman-group16-sha512
-    - diffie-hellman-group-exchange-sha256
-  ubuntu_18:
-    - curve25519-sha256
-    - curve25519-sha256@libssh.org
-    - diffie-hellman-group18-sha512
-    - diffie-hellman-group16-sha512
-    - diffie-hellman-group-exchange-sha256
-  ubuntu_20:
-    - curve25519-sha256
-    - curve25519-sha256@libssh.org
-    - diffie-hellman-group18-sha512
-    - diffie-hellman-group16-sha512
-    - diffie-hellman-group-exchange-sha256
+  default: >-
+    {{
+      ['sntrup761x25519-sha512@openssh.com']
+      +
+      __ssh_audited_kex_algorithms_base
+    }}
+  redhat_8: '{{ __ssh_audited_kex_algorithms_base }}'
+  ubuntu_18: '{{ __ssh_audited_kex_algorithms_base }}'
+  ubuntu_20: '{{ __ssh_audited_kex_algorithms_base }}'
 
 __ssh_audited_kex_algorithms: >-
   {{
@@ -34,20 +29,24 @@ __ssh_audited_kex_algorithms: >-
       default(__ssh_audited_kex_algorithm_variants['default'])
   }}
 
+# -----------------------------------------------------------------------------
+# host key and pub key types / algorithms
+# -----------------------------------------------------------------------------
+
+__ssh_audited_key_algorithms_base:
+  - ssh-ed25519
+  - rsa-sha2-512
+  - rsa-sha2-256
+
 __ssh_audited_key_algorithm_variants:
-  default:
-    - sk-ssh-ed25519@openssh.com
-    - ssh-ed25519
-    - rsa-sha2-512
-    - rsa-sha2-256
-  redhat_8:
-    - ssh-ed25519
-    - rsa-sha2-512
-    - rsa-sha2-256
-  ubuntu_18:
-    - ssh-ed25519
-    - rsa-sha2-512
-    - rsa-sha2-256
+  default: >-
+    {{
+      ['sk-ssh-ed25519@openssh.com']
+      +
+      __ssh_audited_key_algorithms_base
+    }}
+  redhat_8: '{{ __ssh_audited_key_algorithms_base }}'
+  ubuntu_18: '{{ __ssh_audited_key_algorithms_base }}'
 
 __ssh_audited_key_algorithms: >-
   {{
@@ -55,6 +54,10 @@ __ssh_audited_key_algorithms: >-
       default(__ssh_audited_key_algorithm_variants[__ssh_os_version]) |
       default(__ssh_audited_key_algorithm_variants['default'])
   }}
+
+# -----------------------------------------------------------------------------
+# sftp server binary location
+# -----------------------------------------------------------------------------
 
 __ssh_audited_sftp_server_locations:
   archlinux: /usr/lib/ssh/sftp-server
